Source/quantumCode/AST_Scripts/ExpParser.py
# Generated from Exp.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class ExpParser ( Parser ):

    grammarFileName = "Exp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'('", "')'", "','", "'-'", "'+'", 
                     "'*'", "'/'", "'%'", "'^'", "'let'", "':'", "'|'", 
                     "'=>'", "'&&'", "'||'", "'bool'", "'num'", "'->'", 
                     "'app'", "'then'", "'else'", "'match'", "'with'", "'if'", 
                     "'car'", "'cdr'", "'<'", "'='", "'>'", "'#t'", "'#f'", 
                     "'SKIP'", "'X'", "'CU'", "'RZ'", "'SR'", "'Lshift'", 
                     "'Rshift'", "'Rev'", "'QFT'", "'RQFT'", "'.'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'@'", "'...'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "App", "Then", "Else", "Match", "With", "If", "Car", 
                      "Cdr", "Less", "Equal", "Greater", "TrueLiteral", 
                      "FalseLiteral", "SKIPEXP", "Xgate", "CU", "RZ", "SR", 
                      "Lshift", "Rshift", "Rev", "QFT", "RQFT", "Dot", "Number", 
                      "Identifier", "Letter", "LetterOrDigit", "StrLiteral", 
                      "AT", "ELLIPSIS", "WS", "Comment", "Line_Comment" ]

    RULE_program = 0
    RULE_exp = 1
    RULE_vexp = 2
    RULE_bexp = 3
    RULE_posiexp = 4
    RULE_skipexp = 5
    RULE_xgexp = 6
    RULE_cuexp = 7
    RULE_rzexp = 8
    RULE_srexp = 9
    RULE_lshiftexp = 10
    RULE_rshiftexp = 11
    RULE_revexp = 12
    RULE_qftexp = 13
    RULE_rqftexp = 14
    RULE_numexp = 15
    RULE_addexp = 16
    RULE_subexp = 17
    RULE_multexp = 18
    RULE_divexp = 19
    RULE_modexp = 20
    RULE_expexp = 21
    RULE_letexp = 22
    RULE_matchexp = 23
    RULE_boolexp = 24
    RULE_callexp = 25
    RULE_ifexp = 26
    RULE_lessexp = 27
    RULE_equalexp = 28
    RULE_greaterexp = 29
    RULE_andexp = 30
    RULE_orexp = 31
    RULE_typea = 32
    RULE_booleantype = 33
    RULE_numtype = 34
    RULE_pairtype = 35
    RULE_funct = 36

    ruleNames =  [ "program", "exp", "vexp", "bexp", "posiexp", "skipexp", 
                   "xgexp", "cuexp", "rzexp", "srexp", "lshiftexp", "rshiftexp", 
                   "revexp", "qftexp", "rqftexp", "numexp", "addexp", "subexp", 
                   "multexp", "divexp", "modexp", "expexp", "letexp", "matchexp", 
                   "boolexp", "callexp", "ifexp", "lessexp", "equalexp", 
                   "greaterexp", "andexp", "orexp", "typea", "booleantype", 
                   "numtype", "pairtype", "funct" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    App=20
    Then=21
    Else=22
    Match=23
    With=24
    If=25
    Car=26
    Cdr=27
    Less=28
    Equal=29
    Greater=30
    TrueLiteral=31
    FalseLiteral=32
    SKIPEXP=33
    Xgate=34
    CU=35
    RZ=36
    SR=37
    Lshift=38
    Rshift=39
    Rev=40
    QFT=41
    RQFT=42
    Dot=43
    Number=44
    Identifier=45
    Letter=46
    LetterOrDigit=47
    StrLiteral=48
    AT=49
    ELLIPSIS=50
    WS=51
    Comment=52
    Line_Comment=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpParser.ExpContext)
            else:
                return self.getTypedRuleContext(ExpParser.ExpContext,i)


        def getRuleIndex(self):
            return ExpParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ExpParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.exp()
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ExpParser.T__0:
                self.state = 75
                self.match(ExpParser.T__0)
                self.state = 76
                self.exp()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(ExpParser.Identifier, 0)

        def letexp(self):
            return self.getTypedRuleContext(ExpParser.LetexpContext,0)


        def callexp(self):
            return self.getTypedRuleContext(ExpParser.CallexpContext,0)


        def ifexp(self):
            return self.getTypedRuleContext(ExpParser.IfexpContext,0)


        def skipexp(self):
            return self.getTypedRuleContext(ExpParser.SkipexpContext,0)


        def xgexp(self):
            return self.getTypedRuleContext(ExpParser.XgexpContext,0)


        def cuexp(self):
            return self.getTypedRuleContext(ExpParser.CuexpContext,0)


        def rzexp(self):
            return self.getTypedRuleContext(ExpParser.RzexpContext,0)


        def srexp(self):
            return self.getTypedRuleContext(ExpParser.SrexpContext,0)


        def lshiftexp(self):
            return self.getTypedRuleContext(ExpParser.LshiftexpContext,0)


        def rshiftexp(self):
            return self.getTypedRuleContext(ExpParser.RshiftexpContext,0)


        def revexp(self):
            return self.getTypedRuleContext(ExpParser.RevexpContext,0)


        def qftexp(self):
            return self.getTypedRuleContext(ExpParser.QftexpContext,0)


        def rqftexp(self):
            return self.getTypedRuleContext(ExpParser.RqftexpContext,0)


        def exp(self):
            return self.getTypedRuleContext(ExpParser.ExpContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)




    def exp(self):

        localctx = ExpParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_exp)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExpParser.Identifier]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.match(ExpParser.Identifier)
                pass
            elif token in [ExpParser.T__10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.letexp()
                pass
            elif token in [ExpParser.App]:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.callexp()
                pass
            elif token in [ExpParser.If]:
                self.enterOuterAlt(localctx, 4)
                self.state = 85
                self.ifexp()
                pass
            elif token in [ExpParser.SKIPEXP]:
                self.enterOuterAlt(localctx, 5)
                self.state = 86
                self.skipexp()
                pass
            elif token in [ExpParser.Xgate]:
                self.enterOuterAlt(localctx, 6)
                self.state = 87
                self.xgexp()
                pass
            elif token in [ExpParser.CU]:
                self.enterOuterAlt(localctx, 7)
                self.state = 88
                self.cuexp()
                pass
            elif token in [ExpParser.RZ]:
                self.enterOuterAlt(localctx, 8)
                self.state = 89
                self.rzexp()
                pass
            elif token in [ExpParser.SR]:
                self.enterOuterAlt(localctx, 9)
                self.state = 90
                self.srexp()
                pass
            elif token in [ExpParser.Lshift]:
                self.enterOuterAlt(localctx, 10)
                self.state = 91
                self.lshiftexp()
                pass
            elif token in [ExpParser.Rshift]:
                self.enterOuterAlt(localctx, 11)
                self.state = 92
                self.rshiftexp()
                pass
            elif token in [ExpParser.Rev]:
                self.enterOuterAlt(localctx, 12)
                self.state = 93
                self.revexp()
                pass
            elif token in [ExpParser.QFT]:
                self.enterOuterAlt(localctx, 13)
                self.state = 94
                self.qftexp()
                pass
            elif token in [ExpParser.RQFT]:
                self.enterOuterAlt(localctx, 14)
                self.state = 95
                self.rqftexp()
                pass
            elif token in [ExpParser.T__1]:
                self.enterOuterAlt(localctx, 15)
                self.state = 96
                self.match(ExpParser.T__1)
                self.state = 97
                self.exp()
                self.state = 98
                self.match(ExpParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(ExpParser.Identifier, 0)

        def numexp(self):
            return self.getTypedRuleContext(ExpParser.NumexpContext,0)


        def boolexp(self):
            return self.getTypedRuleContext(ExpParser.BoolexpContext,0)


        def addexp(self):
            return self.getTypedRuleContext(ExpParser.AddexpContext,0)


        def subexp(self):
            return self.getTypedRuleContext(ExpParser.SubexpContext,0)


        def multexp(self):
            return self.getTypedRuleContext(ExpParser.MultexpContext,0)


        def divexp(self):
            return self.getTypedRuleContext(ExpParser.DivexpContext,0)


        def modexp(self):
            return self.getTypedRuleContext(ExpParser.ModexpContext,0)


        def expexp(self):
            return self.getTypedRuleContext(ExpParser.ExpexpContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_vexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVexp" ):
                listener.enterVexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVexp" ):
                listener.exitVexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVexp" ):
                return visitor.visitVexp(self)
            else:
                return visitor.visitChildren(self)




    def vexp(self):

        localctx = ExpParser.VexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vexp)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.match(ExpParser.Identifier)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.numexp()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.boolexp()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 105
                self.addexp()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 106
                self.subexp()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 107
                self.multexp()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 108
                self.divexp()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 109
                self.modexp()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 110
                self.expexp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lessexp(self):
            return self.getTypedRuleContext(ExpParser.LessexpContext,0)


        def equalexp(self):
            return self.getTypedRuleContext(ExpParser.EqualexpContext,0)


        def greaterexp(self):
            return self.getTypedRuleContext(ExpParser.GreaterexpContext,0)


        def andexp(self):
            return self.getTypedRuleContext(ExpParser.AndexpContext,0)


        def orexp(self):
            return self.getTypedRuleContext(ExpParser.OrexpContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_bexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBexp" ):
                listener.enterBexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBexp" ):
                listener.exitBexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBexp" ):
                return visitor.visitBexp(self)
            else:
                return visitor.visitChildren(self)




    def bexp(self):

        localctx = ExpParser.BexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bexp)
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.lessexp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.equalexp()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.greaterexp()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 116
                self.andexp()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 117
                self.orexp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PosiexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vexp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpParser.VexpContext)
            else:
                return self.getTypedRuleContext(ExpParser.VexpContext,i)


        def getRuleIndex(self):
            return ExpParser.RULE_posiexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPosiexp" ):
                listener.enterPosiexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPosiexp" ):
                listener.exitPosiexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPosiexp" ):
                return visitor.visitPosiexp(self)
            else:
                return visitor.visitChildren(self)




    def posiexp(self):

        localctx = ExpParser.PosiexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_posiexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(ExpParser.T__1)
            self.state = 121
            self.vexp()
            self.state = 122
            self.match(ExpParser.T__3)
            self.state = 123
            self.vexp()
            self.state = 124
            self.match(ExpParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SkipexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SKIPEXP(self):
            return self.getToken(ExpParser.SKIPEXP, 0)

        def posiexp(self):
            return self.getTypedRuleContext(ExpParser.PosiexpContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_skipexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSkipexp" ):
                listener.enterSkipexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSkipexp" ):
                listener.exitSkipexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSkipexp" ):
                return visitor.visitSkipexp(self)
            else:
                return visitor.visitChildren(self)




    def skipexp(self):

        localctx = ExpParser.SkipexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_skipexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(ExpParser.SKIPEXP)
            self.state = 127
            self.posiexp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class XgexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Xgate(self):
            return self.getToken(ExpParser.Xgate, 0)

        def posiexp(self):
            return self.getTypedRuleContext(ExpParser.PosiexpContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_xgexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterXgexp" ):
                listener.enterXgexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitXgexp" ):
                listener.exitXgexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitXgexp" ):
                return visitor.visitXgexp(self)
            else:
                return visitor.visitChildren(self)




    def xgexp(self):

        localctx = ExpParser.XgexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_xgexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(ExpParser.Xgate)
            self.state = 130
            self.posiexp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CuexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CU(self):
            return self.getToken(ExpParser.CU, 0)

        def posiexp(self):
            return self.getTypedRuleContext(ExpParser.PosiexpContext,0)


        def exp(self):
            return self.getTypedRuleContext(ExpParser.ExpContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_cuexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCuexp" ):
                listener.enterCuexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCuexp" ):
                listener.exitCuexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCuexp" ):
                return visitor.visitCuexp(self)
            else:
                return visitor.visitChildren(self)




    def cuexp(self):

        localctx = ExpParser.CuexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cuexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(ExpParser.CU)
            self.state = 133
            self.posiexp()
            self.state = 134
            self.exp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RzexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RZ(self):
            return self.getToken(ExpParser.RZ, 0)

        def vexp(self):
            return self.getTypedRuleContext(ExpParser.VexpContext,0)


        def posiexp(self):
            return self.getTypedRuleContext(ExpParser.PosiexpContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_rzexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRzexp" ):
                listener.enterRzexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRzexp" ):
                listener.exitRzexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRzexp" ):
                return visitor.visitRzexp(self)
            else:
                return visitor.visitChildren(self)




    def rzexp(self):

        localctx = ExpParser.RzexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_rzexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(ExpParser.RZ)
            self.state = 137
            self.vexp()
            self.state = 138
            self.posiexp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SrexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SR(self):
            return self.getToken(ExpParser.SR, 0)

        def vexp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpParser.VexpContext)
            else:
                return self.getTypedRuleContext(ExpParser.VexpContext,i)


        def getRuleIndex(self):
            return ExpParser.RULE_srexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSrexp" ):
                listener.enterSrexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSrexp" ):
                listener.exitSrexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSrexp" ):
                return visitor.visitSrexp(self)
            else:
                return visitor.visitChildren(self)




    def srexp(self):

        localctx = ExpParser.SrexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_srexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(ExpParser.SR)
            self.state = 141
            self.vexp()
            self.state = 142
            self.vexp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LshiftexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Lshift(self):
            return self.getToken(ExpParser.Lshift, 0)

        def vexp(self):
            return self.getTypedRuleContext(ExpParser.VexpContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_lshiftexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLshiftexp" ):
                listener.enterLshiftexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLshiftexp" ):
                listener.exitLshiftexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLshiftexp" ):
                return visitor.visitLshiftexp(self)
            else:
                return visitor.visitChildren(self)




    def lshiftexp(self):

        localctx = ExpParser.LshiftexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_lshiftexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(ExpParser.Lshift)
            self.state = 145
            self.vexp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RshiftexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Rshift(self):
            return self.getToken(ExpParser.Rshift, 0)

        def vexp(self):
            return self.getTypedRuleContext(ExpParser.VexpContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_rshiftexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRshiftexp" ):
                listener.enterRshiftexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRshiftexp" ):
                listener.exitRshiftexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRshiftexp" ):
                return visitor.visitRshiftexp(self)
            else:
                return visitor.visitChildren(self)




    def rshiftexp(self):

        localctx = ExpParser.RshiftexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_rshiftexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(ExpParser.Rshift)
            self.state = 148
            self.vexp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RevexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Rev(self):
            return self.getToken(ExpParser.Rev, 0)

        def vexp(self):
            return self.getTypedRuleContext(ExpParser.VexpContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_revexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRevexp" ):
                listener.enterRevexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRevexp" ):
                listener.exitRevexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRevexp" ):
                return visitor.visitRevexp(self)
            else:
                return visitor.visitChildren(self)




    def revexp(self):

        localctx = ExpParser.RevexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_revexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(ExpParser.Rev)
            self.state = 151
            self.vexp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QftexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QFT(self):
            return self.getToken(ExpParser.QFT, 0)

        def vexp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpParser.VexpContext)
            else:
                return self.getTypedRuleContext(ExpParser.VexpContext,i)


        def getRuleIndex(self):
            return ExpParser.RULE_qftexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQftexp" ):
                listener.enterQftexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQftexp" ):
                listener.exitQftexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQftexp" ):
                return visitor.visitQftexp(self)
            else:
                return visitor.visitChildren(self)




    def qftexp(self):
